crates/weaveffi-cli/tests/snapshots/ruby_nested_modules__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# nested_modules (Ruby)

Ruby bindings for `nested_modules` using the [ffi](https://github.com/ffi/ffi) gem.

## Prerequisites

- Ruby 2.7 or newer
- The native library (`libnested_modules.so`, `libnested_modules.dylib`, or `nested_modules.dll`) on the library
  search path, or its path in the `NESTED_MODULES_LIBRARY` environment variable.

## Install

```bash
gem build nested_modules.gemspec
gem install nested_modules-0.1.0.gem
```

## Usage

```ruby
require 'nested_modules'

NestedModules::ABI_VERSION
```

<!-- END README.md -->
