crates/weaveffi-cli/tests/snapshots/ruby_nested_modules__lib_nested_modules_rb.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION]
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate

# frozen_string_literal: true

require_relative 'nested_modules/runtime'

# Ruby bindings for nested_modules.
module NestedModules
  # The declarations these bindings were generated with, per top-level
  # module, as [id, hash, path]. Loading fails, naming the path, unless
  # the library's contract table holds each one with an equal hash.
  _wv_check_contract!(
    nested_modules_graphics_contract: [
      [0x2c29eef9327a6bd4, 0x12983d5271651389, 'graphics.Unit'],
      [0x304088bbc28f0015, 0x97e6e809913be6b6, 'graphics.new_canvas'],
      [0x49f8837532df9ac6, 0x32e5b27e81ee0957, 'graphics.Canvas'],
      [0x55717fa027336b47, 0xb2bd3a6bdcce48c8, 'graphics.shapes.describe'],
      [0x7626b91b8f1f53cd, 0x867bbf7cf0f41c74, 'graphics.shapes.geometry.compute'],
      [0xb3efcb50d9a61ab7, 0x3cb0207dfad2a149, 'graphics.GraphicsError'],
      [0xc62b16a9591b744b, 0x7895610c8487eb1b, 'graphics.shapes.Shape'],
      [0xe13001f4983ccd35, 0x16e7de070b4a4cfc, 'graphics.shapes.geometry.Detail'],
      [0xf3f658bcfc5dba62, 0x2665ccb47356e746, 'graphics.shapes.make_shape'],
    ],
  )

  # === Module: graphics ===

  # Base error for the `graphics` module's error domain.
  class GraphicsError < Error
    # coordinate out of bounds
    class OutOfBounds < GraphicsError
      CODE = 1

      def initialize(message = nil)
        super(CODE, message || 'coordinate out of bounds')
      end
    end
  end

  # @api private
  # The GraphicsError for a domain `code`, with its payload fields decoded;
  # the root Error (or Cancelled) for any other code.
  def self._wv_graphics_error_from(code, message, payload = nil)
    message = nil if message.empty?
    r = WvBufferReader.new(payload)
    error =
      case code
      when 1
        GraphicsError::OutOfBounds.new(message)
      else
        return _wv_error(code, message.to_s)
      end
    r.expect_end!
    error
  end

  # @api private
  # Raises the GraphicsError for a non-zero error slot.
  def self._wv_check_graphics_error!(err)
    taken = _wv_take_error(err)
    raise _wv_graphics_error_from(*taken) unless taken.nil?
  end

  # A measurement unit shared with nested submodules.
  module Unit
    PIXELS = 0
    POINTS = 1
  end

  # Top-level struct that references a struct defined one level deeper.
  class Canvas
    attr_reader :width

    # Reference down into a nested module
    attr_reader :root

    def initialize(width:, root:)
      @width = width
      @root = root
    end

    # Structural equality over every field.
    def ==(other)
      other.is_a?(Canvas) &&
        width == other.width &&
        root == other.root
    end
  end

  # @api private
  # Packs a Canvas into the value-buffer wire format.
  def self._wv_write_canvas(w, v)
    w.write_i32(v.width)
    _wv_write_shape(w, v.root)
  end

  # @api private
  # Unpacks a Canvas from the value-buffer wire format.
  def self._wv_read_canvas(r)
    Canvas.new(width: r.read_i32, root: _wv_read_shape(r))
  end

  attach_function :nested_modules_graphics_new_canvas, [:int32, :pointer, :pointer], :pointer, blocking: true

  # Construct a Canvas.
  # @return [Canvas]
  def self.new_canvas(width)
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = nested_modules_graphics_new_canvas(width, out_len, err)
    _wv_check!(err)
    _wv_decode(result, out_len.read(:size_t)) { |r| _wv_read_canvas(r) }
  end

  # === Module: graphics.shapes ===

  # A struct one level deep that references both an ancestor enum and a deeper struct.
  class Shape
    attr_reader :sides

    # Reference up to the parent module's enum
    attr_reader :unit

    # Reference down into a deeper module
    attr_reader :detail

    def initialize(sides:, unit:, detail:)
      @sides = sides
      @unit = unit
      @detail = detail
    end

    # Structural equality over every field.
    def ==(other)
      other.is_a?(Shape) &&
        sides == other.sides &&
        unit == other.unit &&
        detail == other.detail
    end
  end

  # @api private
  # Packs a Shape into the value-buffer wire format.
  def self._wv_write_shape(w, v)
    w.write_i32(v.sides)
    w.write_i32(v.unit)
    _wv_write_detail(w, v.detail)
  end

  # @api private
  # Unpacks a Shape from the value-buffer wire format.
  def self._wv_read_shape(r)
    Shape.new(sides: r.read_i32, unit: r.read_i32, detail: _wv_read_detail(r))
  end

  attach_function :nested_modules_graphics_shapes_make_shape, [:int32, :pointer, :pointer], :pointer, blocking: true
  attach_function :nested_modules_graphics_shapes_describe, [:pointer, :pointer], :pointer, blocking: true

  # Construct a Shape.
  # @return [Shape]
  def self.make_shape(sides)
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = nested_modules_graphics_shapes_make_shape(sides, out_len, err)
    _wv_check!(err)
    _wv_decode(result, out_len.read(:size_t)) { |r| _wv_read_shape(r) }
  end

  # Nested function returning a struct owned by an ancestor module.
  # @return [Canvas]
  def self.describe
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = nested_modules_graphics_shapes_describe(out_len, err)
    _wv_check!(err)
    _wv_decode(result, out_len.read(:size_t)) { |r| _wv_read_canvas(r) }
  end

  # === Module: graphics.shapes.geometry ===

  # A struct two levels deep.
  class Detail
    attr_reader :area

    def initialize(area:)
      @area = area
    end

    # Structural equality over every field.
    def ==(other)
      other.is_a?(Detail) &&
        area == other.area
    end
  end

  # @api private
  # Packs a Detail into the value-buffer wire format.
  def self._wv_write_detail(w, v)
    w.write_f64(v.area)
  end

  # @api private
  # Unpacks a Detail from the value-buffer wire format.
  def self._wv_read_detail(r)
    Detail.new(area: r.read_f64)
  end

  attach_function :nested_modules_graphics_shapes_geometry_compute, [:pointer, :size_t, :pointer, :pointer], :pointer, blocking: true

  # Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain.
  # @return [Detail]
  def self.compute(shape)
    shape_s = _wv_encode { |w| _wv_write_shape(w, shape) }
    err = ErrorStruct.new
    out_len = FFI::MemoryPointer.new(:size_t)
    result = nested_modules_graphics_shapes_geometry_compute(shape_s, shape_s.bytesize, out_len, err)
    _wv_check_graphics_error!(err)
    _wv_decode(result, out_len.read(:size_t)) { |r| _wv_read_detail(r) }
  end
end

# END nested_modules.rb
