crates/weaveffi-cli/tests/snapshots/ruby_nested_modules__nested_modules_gemspec.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

Gem::Specification.new do |s|
  s.name        = 'nested_modules'
  s.version     = '0.1.0'
  s.summary     = 'Native bindings for nested_modules'
  s.authors     = ['nested_modules']
  s.files       = Dir['lib/**/*.rb']
  s.require_paths = ['lib']
  s.required_ruby_version = '>= 2.7'

  s.add_dependency 'ffi', '~> 1.15'
end

# END nested_modules.gemspec
