crates/weaveffi-cli/tests/snapshots/ruby_nested_modules__weaveffi_gemspec.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

Gem::Specification.new do |s|
  s.name        = 'weaveffi'
  s.version     = '0.1.0'
  s.summary     = 'weaveffi bindings generated by WeaveFFI'
  s.files       = Dir['lib/**/*.rb']
  s.require_paths = ['lib']

  s.add_dependency 'ffi', '~> 1.15'
end

# END weaveffi.gemspec
